--- a/config/locales/as.cn.yml
+++ b/config/locales/as.cn.yml
@@ -53,21 +53,21 @@ cn:
   LessThanOrEqualTo:
     name: "小于等于"
     string: "@left\t小于等于\t@right"
+  # Skip:
+  #   name: "注释"
+  #   string: "注释\t@left"
+  Assignment:
+    name: "代入"
+    string: "把\t@rignt\t代入\t@left"
+  Loop:
+    name: "循环"
+    string:
+  Conditional:
+    name: "条件"
+    string: "如果\t@left\t那么\t@middle\t否则\t@right"
   Variable:
     name: "变数"
     string: "变数@left"
   Constant:
     name: "定数"
     string: "@left"
-  Assignment:
-    name: "代入"
-    string: "把\t@rignt\t代入\t@left"
-  Conditional:
-    name: "条件"
-    string: "如果\t@left\t那么\t@middle\t否则\t@right"
-  Skip:
-    name: "注释"
-    string: "注释\t@left"
-  Loop:
-    name: "循环"
-    string:
