--- a/config/locales/as.vi.yml
+++ b/config/locales/as.vi.yml
@@ -13,10 +13,10 @@ vi:
     string: "@left\tchia cho\t@right"
   Surplus:
     name: "Số dư"
-    string: "Số dư của\t@left\tkhi chia cho\t@right"
+    string: "số dư của\t@left\tkhi chia cho\t@right"
   Logarithm:
     name: "Logarit"
-    string: "Logarit\t@left\tcủa\t@right"
+    string: "logarit\t@left\tcủa\t@right"
   Power:
     name: "Hàm mũ"
     string: "@left\tmũ\t@right"
@@ -53,30 +53,30 @@ vi:
   LessThanOrEqualTo:
     name: "Nhỏ hơn hoặc bằng"
     string: "@left\tnhỏ hơn hoặc bằng\t@right"
-  Program:
-    name: "Chương trình"
-    string: "Chương trình"
-  Instruction:
-    name: "Câu lệnh"
-    string: "Câu lệnh"
-  Skip:
-    name: "Nhảy"
-    string: "Nhảy"
+  # Program:
+  #   name: "Chương trình"
+  #   string: "chương trình"
+  # Instruction:
+  #   name: "Câu lệnh"
+  #   string: "câu lệnh"
+  # Skip:
+  #   name: "Nhảy"
+  #   string: "nhảy"
   Assignment:
     name: "Gán"
-    string: "Gán giá trị\t@left\tcho\t@right"
-  Compound:
-    name: "Khối lệnh"
-    string: "Khối lệnh"
+    string: "gán giá trị\t@left\tcho\t@right"
+  # Compound:
+  #   name: "Khối lệnh"
+  #   string: "khối lệnh"
   Loop:
     name: "Vòng lặp"
     string: ""
   Conditional:
     name: "Câu điều kiện"
-    string: "Nếu\t@left\tthì\t@middle\tkhông thì\t@right"
+    string: "nếu\t@left\tthì\t@middle\tkhông thì\t@right"
   Variable:
     name: "Biến"
-    string: "Biến\t@left"
+    string: "biến\t@left"
   Constant:
     name: "Hằng số"
     string: "@left"
